I changed the colors of the background, the name, and the icons. Also I changed the style of the picture and added uppercase to the name

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   <body>
     <div class="container pt-5">
       <div class="row">
-        <div class="col-4">
+        <div class="col-4 first-column p-3">
           <img
             src="images/my-picture.jpg"
-            class="img-fluid rounded"
+            class="img-fluid rounded my-picture"
             alt="my picture"
-            style="width: 12rem"
+            style="width: 15rem"
           />
           <br />
           <i class="fa-solid fa-angles-right mt-3"> About Me</i>
@@ -60,17 +60,17 @@
           </ul>
           <i class="fa-solid fa-angles-right"> Contact Me</i>
           <ul class="mt-2">
-            <i class="fa-solid fa-phone" style="color: #995db5"> </i>
+            <i class="fa-solid fa-phone" style="color: #90a4e7"> </i>
             +4915774871689
           </ul>
           <ul>
-            <i class="fa-solid fa-envelope" style="color: #995db5"> </i>
+            <i class="fa-solid fa-envelope" style="color: #90a4e7"> </i>
             <a href="mailto:raalizz.h@gmail.com" style="color: black"
               >raalizz.h@gmail.com</a
             >
           </ul>
           <ul>
-            <i class="fa-brands fa-linkedin" style="color: #995db5"></i>
+            <i class="fa-brands fa-linkedin" style="color: #90a4e7"></i>
             <a
               href="https://www.linkedin
               .com
@@ -83,7 +83,7 @@
             </a>
           </ul>
           <ul>
-            <strong style="color: #995db5"> URL:</strong>
+            <strong style="color: #90a4e7"> URL:</strong>
 
             <a
               href="https://raghda-alizz-alshaikhli.netlify.app/"
@@ -96,7 +96,7 @@
         </div>
 
         <div class="col-8">
-          <h1>Raghda Alizz Al-Shaikhli</h1>
+          <h1 class="name">Raghda Alizz Al-Shaikhli</h1>
           <h5>Junior Front-end Developer</h5>
         </div>
       </div>
