I added the the education section and the certification section to the second column. Also, I deleted the arrows of the tiles and changed the color

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             style="width: 15rem"
           />
           <br />
-          <i class="fa-solid fa-angles-right mt-3"> About Me</i>
+          <h5 style="color: #90a4e7">PROFILE</h5>
           <p class="lh-base">
             Newly certified Front-end developer actively seeking fully remote
             opportunities to help enhance skills and knowlege in the tech world.
           </p>
 
-          <i class="fa-solid fa-angles-right"> Top Skills</i>
+          <h5 style="color: #90a4e7">TOP SKILLS</h5>
           <ul class="lh-sm mt-2">
             <li>HTML</li>
             <li>CSS</li>
@@ -58,19 +58,19 @@
             <li>Scribing Programs</li>
             <li>Customer Service</li>
           </ul>
-          <i class="fa-solid fa-angles-right"> Contact Me</i>
+          <h5 style="color: #90a4e7">CONTACT</h5>
           <ul class="mt-2">
-            <i class="fa-solid fa-phone" style="color: #90a4e7"> </i>
+            <i class="fa-solid fa-phone" style="color: #7492f7"> </i>
             +4915774871689
           </ul>
           <ul>
-            <i class="fa-solid fa-envelope" style="color: #90a4e7"> </i>
+            <i class="fa-solid fa-envelope" style="color: #7492f7"> </i>
             <a href="mailto:raalizz.h@gmail.com" style="color: black"
               >raalizz.h@gmail.com</a
             >
           </ul>
           <ul>
-            <i class="fa-brands fa-linkedin" style="color: #90a4e7"></i>
+            <i class="fa-brands fa-linkedin" style="color: #7492f7"></i>
             <a
               href="https://www.linkedin
               .com
@@ -83,7 +83,7 @@
             </a>
           </ul>
           <ul>
-            <strong style="color: #90a4e7"> URL:</strong>
+            <strong style="color: #7492f7"> URL:</strong>
 
             <a
               href="https://raghda-alizz-alshaikhli.netlify.app/"
@@ -98,6 +98,62 @@
         <div class="col-8">
           <h1 class="name">Raghda Alizz Al-Shaikhli</h1>
           <h5>Junior Front-end Developer</h5>
+          <h5 class="mt-5" style="color: #90a4e7">EDUCATION</h5>
+
+          <h6 style="text-transform: uppercase" class="mt-2">
+            Bachelor of Science in Biology
+          </h6>
+          <p>Attended Oakland University in Michigan/USA, class of 2015</p>
+          <h6 style="text-transform: uppercase" class="mt-2">
+            MS Healthcare Administration
+          </h6>
+          <p>Attended Southern New Hampshire University, class of 2018</p>
+          <h6 style="text-transform: uppercase" class="mt-2">SheCodes MAX</h6>
+          <p>Still enrolled in the program and working on completing it</p>
+          <h5 style="color: #90a4e7">CERTIFICATIONS</h5>
+          <ul class="lh-sm mt-2">
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/8bdd3f054f49a10696014052521c2145"
+                class="certificates"
+                target="_blank"
+                >SheCodes Introduction to Coding</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/b101d1b9b9613545650e6a9316537bb8"
+                class="certificates"
+                target="_blank"
+              >
+                SheCodes Introduction to Web Development</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/f1779ffc19d9196c7d9900891c67f073"
+                class="certificates"
+                target="_blank"
+                >SheCodes Web Development</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/365caba9c069df00ba3f256695bbdd94"
+                class="certificates"
+                target="_blank"
+                >SheCodes Advanced Web Development</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/e59baea188d29854d1a01609a8017f91"
+                class="certificates"
+                target="_blank"
+                >SheCodes Responsive Web Development</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </div>
