I added the work experience section and made some changes to the contact section

--- a/index.html
+++ b/index.html
@@ -59,40 +59,36 @@
             <li>Customer Service</li>
           </ul>
           <h5 style="color: #90a4e7">CONTACT</h5>
-          <ul class="mt-2">
-            <i class="fa-solid fa-phone" style="color: #7492f7"> </i>
-            +4915774871689
-          </ul>
-          <ul>
-            <i class="fa-solid fa-envelope" style="color: #7492f7"> </i>
-            <a href="mailto:raalizz.h@gmail.com" style="color: black"
-              >raalizz.h@gmail.com</a
-            >
-          </ul>
-          <ul>
-            <i class="fa-brands fa-linkedin" style="color: #7492f7"></i>
-            <a
-              href="https://www.linkedin
+
+          <i class="fa-solid fa-phone" style="color: #7492f7"> </i>
+          +4915774871689
+          <br />
+          <i class="fa-solid fa-envelope mt-4" style="color: #7492f7"> </i>
+          <a href="mailto:raalizz.h@gmail.com" style="color: black"
+            >raalizz.h@gmail.com</a
+          >
+          <br />
+          <i class="fa-brands fa-linkedin mt-4" style="color: #7492f7"></i>
+          <a
+            href="https://www.linkedin
               .com
               /in/
               raghdaalizz"
-              target="_blank"
-              style="color: black"
-              title="Linkedin"
-              >https://www.linkedin.com/in/ raghdaalizz
-            </a>
-          </ul>
-          <ul>
-            <strong style="color: #7492f7"> URL:</strong>
+            target="_blank"
+            style="color: black"
+            title="Linkedin"
+            >https://www.linkedin.com/in/ raghdaalizz
+          </a>
+          <br />
+          <strong class="mt-4" style="color: #7492f7"> URL:</strong>
 
-            <a
-              href="https://raghda-alizz-alshaikhli.netlify.app/"
-              target="_blank"
-              style="color: black"
-              title="My Portfolio"
-              >https://raghda-alizz-alshaikhli.netlify.app/</a
-            >
-          </ul>
+          <a
+            href="https://raghda-alizz-alshaikhli.netlify.app/"
+            target="_blank"
+            style="color: black"
+            title="My Portfolio"
+            >https://raghda-alizz-alshaikhli.netlify.app/</a
+          >
         </div>
 
         <div class="col-8">
@@ -153,6 +149,58 @@
                 >SheCodes Responsive Web Development</a
               >
             </li>
+          </ul>
+          <h5 style="color: #90a4e7">WORK EXPERIENCE</h5>
+          <h6 style="text-transform: uppercase" class="mt-2">
+            Medical Scribe and Medical Assistant
+          </h6>
+          <p>
+            Dr. Arthur Rosner ENT and Sleep Medicine, Rochester Hills, MI
+            <em>March 2016 – March 2018 </em>
+          </p>
+          <ul class="lh-sm mt-2">
+            <li>
+              Meticulously documented patients' notes during and after their
+              visits using Praxis EMR System.
+            </li>
+            <li>
+              Expertly managed front-desk duties utilizing eThomas and
+              translated complex paperwork and health questionaries.
+            </li>
+            <li>
+              Communicated time-sensitive information effectively to doctors,
+              staff, and patients through emails, letters, and phone calls.
+            </li>
+            <li>
+              Provided support to Dr.Rosner by assessing patients' vital signs
+              and assisting in in-office surgeries.
+            </li>
+          </ul>
+          <h6 style="text-transform: uppercase" class="mt-2">
+            Patient Care Coordinator
+          </h6>
+          <p>
+            Dr. Joel Harris Dermatology, Madison Heights, MI <br />
+            <em> July 2015 – March 2016 </em>
+          </p>
+          <ul class="lh-sm mt-2">
+            <li>
+              Scheduled and coordinated in-person meetings, events, and
+              appointments.
+            </li>
+            <li>
+              Managed busy phone lines and facilitated 50+ calls per day with
+              patients, medical facilities, and insurance companies.
+            </li>
+            <li>
+              Communicated time-sensitive information effectively to doctors,
+              staff, and patients through emails, letters, and phone calls.
+            </li>
+            <li>
+              Expertly performed front desk duties utilizing healthpack and
+              Sovacity EMRs.
+            </li>
+            <li>Promoted and sold skin care products.</li>
           </ul>
         </div>
       </div>
