--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
             <li>Scribing Programs</li>
             <li>Customer Service</li>
           </ul>
-          <h5 style="color: #90a4e7">CONTACT</h5>
+          <h5 class="mb-4" style="color: #90a4e7">CONTACT INFO</h5>
 
-          <i class="fa-solid fa-phone" style="color: #7492f7"> </i>
+          <i class="fa-solid fa-phone fs-4" style="color: #7492f7"> </i>
           +4915774871689
           <br />
-          <i class="fa-solid fa-envelope mt-4" style="color: #7492f7"> </i>
-          <a href="mailto:raalizz.h@gmail.com" style="color: black"
-            >raalizz.h@gmail.com</a
+          <i class="fa-solid fa-envelope mt-4 fs-4" style="color: #7492f7"> </i>
+          <a href="mailto:raalizz.h@gmail.com" style="color: black">
+            raalizz.h@gmail.com</a
           >
           <br />
-          <i class="fa-brands fa-linkedin mt-4" style="color: #7492f7"></i>
+          <i class="fa-brands fa-linkedin mt-4 fs-4" style="color: #7492f7"></i>
           <a
             href="https://www.linkedin
               .com
@@ -80,7 +80,8 @@
             >https://www.linkedin.com/in/ raghdaalizz
           </a>
           <br />
-          <strong class="mt-4" style="color: #7492f7"> URL:</strong>
+          <br />
+          <strong class="fs-5" style="color: #7492f7"> URL:</strong>
 
           <a
             href="https://raghda-alizz-alshaikhli.netlify.app/"
