I made the website more responsive by adding sm to the columns

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container pt-5">
       <div class="row">
-        <div class="col-4 first-column p-3">
+        <div class="col-sm-4 first-column p-3">
           <img
             src="images/my-picture.jpg"
             class="img-fluid rounded my-picture"
@@ -65,8 +65,8 @@
           <br />
           <i class="fa-solid fa-envelope mt-4 fs-4" style="color: #7492f7"> </i>
           <a href="mailto:raalizz.h@gmail.com" style="color: black">
-            raalizz.h@gmail.com</a
-          >
+            raalizz.h@gmail.com
+          </a>
           <br />
           <i class="fa-brands fa-linkedin mt-4 fs-4" style="color: #7492f7"></i>
           <a
@@ -77,7 +77,7 @@
             target="_blank"
             style="color: black"
             title="Linkedin"
-            >https://www.linkedin.com/in/ raghdaalizz
+            >https://www.linkedin.com/in/raghdaalizz
           </a>
           <br />
           <br />
@@ -92,7 +92,7 @@
           >
         </div>
 
-        <div class="col-8">
+        <div class="col-sm-8">
           <h1 class="name">Raghda Alizz Al-Shaikhli</h1>
           <h5>Junior Front-end Developer</h5>
           <h5 class="mt-5" style="color: #90a4e7">EDUCATION</h5>
