--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
                 >SheCodes Responsive Web Development</a
               >
             </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/53dbec3d30ec343ba584aba49ff671a4"
+                class="certificates"
+                target="_blank"
+                >SheCodes Advanced Responsive Web Development</a
+              >
+            </li>
           </ul>
           <h5 style="color: #90a4e7">WORK EXPERIENCE</h5>
           <h6 style="text-transform: uppercase" class="mt-2">
