I added React to my skills and also added  rel="noreferrer" to all the links on the resume

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
+            <li>React</li>
             <li>Deployment</li>
             <li>API Integration</li>
             <li>Scribing Programs</li>
@@ -75,6 +76,7 @@
               /in/
               raghdaalizz"
             target="_blank"
+            rel="noreferrer"
             style="color: black"
             title="Linkedin"
             >https://www.linkedin.com/in/raghdaalizz
@@ -86,6 +88,7 @@
           <a
             href="https://raghda-alizz-alshaikhli.netlify.app/"
             target="_blank"
+            rel="noreferrer"
             style="color: black"
             title="My Portfolio"
             >https://raghda-alizz-alshaikhli.netlify.app/</a
@@ -114,6 +117,7 @@
                 href="https://www.shecodes.io/certificates/8bdd3f054f49a10696014052521c2145"
                 class="certificates"
                 target="_blank"
+                rel="noreferrer"
                 >SheCodes Introduction to Coding</a
               >
             </li>
@@ -122,6 +126,7 @@
                 href="https://www.shecodes.io/certificates/b101d1b9b9613545650e6a9316537bb8"
                 class="certificates"
                 target="_blank"
+                rel="noreferrer"
               >
                 SheCodes Introduction to Web Development</a
               >
@@ -131,6 +136,7 @@
                 href="https://www.shecodes.io/certificates/f1779ffc19d9196c7d9900891c67f073"
                 class="certificates"
                 target="_blank"
+                rel="noreferrer"
                 >SheCodes Web Development</a
               >
             </li>
@@ -139,6 +145,7 @@
                 href="https://www.shecodes.io/certificates/365caba9c069df00ba3f256695bbdd94"
                 class="certificates"
                 target="_blank"
+                rel="noreferrer"
                 >SheCodes Advanced Web Development</a
               >
             </li>
@@ -147,6 +154,7 @@
                 href="https://www.shecodes.io/certificates/e59baea188d29854d1a01609a8017f91"
                 class="certificates"
                 target="_blank"
+                rel="noreferrer"
                 >SheCodes Responsive Web Development</a
               >
             </li>
@@ -155,6 +163,7 @@
                 href="https://www.shecodes.io/certificates/53dbec3d30ec343ba584aba49ff671a4"
                 class="certificates"
                 target="_blank"
+                rel="noreferrer"
                 >SheCodes Advanced Responsive Web Development</a
               >
             </li>
