--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
                 >SheCodes Advanced Responsive Web Development</a
               >
             </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/f6838a429fa9adcc2fa4e7807c040a7c"
+                class="certificates"
+                target="_blank"
+                rel="noreferrer"
+                >SheCodes React Development</a
+              >
+            </li>
           </ul>
           <h5 style="color: #90a4e7">WORK EXPERIENCE</h5>
           <h6 style="text-transform: uppercase" class="mt-2">
