I added another shecodes certificate

--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@
                 >SheCodes React Development</a
               >
             </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/925ee2002b7b4b348dd7d5e76b5228a5"
+                class="certificates"
+                target="_blank"
+                rel="noreferrer"
+              >
+                SheCodes Advanced React Development
+              </a>
+            </li>
           </ul>
           <h5 style="color: #90a4e7">WORK EXPERIENCE</h5>
           <h6 style="text-transform: uppercase" class="mt-2">
