I added my latest certification and made some minor adjustments to the skills section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <br />
           <h5 style="color: #90a4e7">PROFILE</h5>
           <p class="lh-base">
-            Newly certified Front-end developer actively seeking fully remote
+            Junior Front-end developer actively seeking fully remote
             opportunities to help enhance skills and knowlege in the tech world.
           </p>
 
@@ -56,8 +56,6 @@
             <li>React</li>
             <li>Deployment</li>
             <li>API Integration</li>
-            <li>Scribing Programs</li>
-            <li>Customer Service</li>
           </ul>
           <h5 class="mb-4" style="color: #90a4e7">CONTACT INFO</h5>
 
@@ -109,7 +107,7 @@
           </h6>
           <p>Attended Southern New Hampshire University, class of 2018</p>
           <h6 style="text-transform: uppercase" class="mt-2">SheCodes MAX</h6>
-          <p>Still enrolled in the program and working on completing it</p>
+          <p>completed 8 months of coding workshops</p>
           <h5 style="color: #90a4e7">CERTIFICATIONS</h5>
           <ul class="lh-sm mt-2">
             <li>
@@ -184,6 +182,16 @@
                 rel="noreferrer"
               >
                 SheCodes Advanced React Development
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.shecodes.io/certificates/b543be368ba80a09b7b1c95656a87b88"
+                class="certificates"
+                target="_blank"
+                rel="noreferrer"
+              >
+                SheCodes Introduction to Artificial Intelligence
               </a>
             </li>
           </ul>
